## Process this file with automake to produce Makefile.in

CFLAGS =\
	-W -pedantic\
	 -Wall -O2

bin_PROGRAMS = mbusd

mbusd_SOURCES = \
	main.c\
	tty.c\
	tty.h\
	globals.h\
	log.c\
	log.h\
	cfg.c\
	cfg.h\
	conn.c\
	conn.h\
	queue.c\
	queue.h\
	modbus.c\
	modbus.h\
	crc16.c\
	crc16.h\
	state.c\
	state.h\
	sig.h\
	sig.c\
	sock.h\
	sock.c
